--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sentry/nextjs": "^6.11.0",
     "http-status-codes": "^2.1.4",
     "next": "^11.1.2",
+    "next-auth": "^4.0.0-beta.4",
     "next-seo": "^4.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
