--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
     "types": ["jest", "cypress"],
     "jsx": "preserve",
     "noEmit": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "incremental": true
   },
   "exclude": ["./out/**/*", "./node_modules/**/*"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
