--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@chanhly/cui": "https://github.com/ChanhLySolutions/cui",
-    "@sentry/nextjs": "^6.11.0",
+    "@sentry/nextjs": "^6.13.3",
     "http-status-codes": "^2.1.4",
     "next": "^12.0.0",
     "next-auth": "^4.0.0-beta.4",
@@ -39,9 +39,9 @@
     "webpack": "5"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@next/bundle-analyzer": "^11.1.2",
-    "@next/eslint-plugin-next": "^11.1.2",
+    "@babel/core": "^7.15.8",
+    "@next/bundle-analyzer": "^12.0.0",
+    "@next/eslint-plugin-next": "^12.0.0",
     "@storybook/addon-actions": "^6.4.0-beta.18",
     "@storybook/addon-essentials": "^6.4.0-beta.18",
     "@storybook/addon-jest": "^6.4.0-beta.18",
@@ -51,42 +51,42 @@
     "@storybook/manager-webpack5": "^6.4.0-beta.18",
     "@storybook/react": "^6.4.0-beta.18",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@types/node": "^16.7.10",
-    "@types/react": "^17.0.19",
+    "@testing-library/react": "^12.1.2",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "autoprefixer": "^10.3.3",
-    "babel-jest": "^27.1.0",
-    "babel-loader": "^8.2.2",
-    "chromatic": "^5.9.2",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "autoprefixer": "^10.3.7",
+    "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
+    "chromatic": "^6.0.4",
     "cross-env": "^7.0.3",
-    "cypress": "^8.3.1",
-    "eslint": "^7.32.0",
+    "cypress": "^8.7.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-config-next": "^11.1.2",
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-config-next": "^12.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-unused-imports": "^1.1.4",
-    "husky": "^7.0.2",
+    "eslint-plugin-unused-imports": "^1.1.5",
+    "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.1.0",
-    "lint-staged": "^11.1.2",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.5",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.6",
-    "prettier": "^2.3.2",
+    "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
-    "start-server-and-test": "^1.13.1",
+    "start-server-and-test": "^1.14.0",
     "storybook-addon-next-router": "^3.0.8",
-    "tailwindcss": "^2.2.9",
+    "tailwindcss": "^2.2.17",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.4"
   },
   "license": "ISC"
 }
