--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
     "@babel/core": "^7.15.8",
     "@next/bundle-analyzer": "^12.0.0",
     "@next/eslint-plugin-next": "^12.0.0",
-    "@storybook/addon-actions": "^6.4.0-beta.18",
-    "@storybook/addon-essentials": "^6.4.0-beta.18",
-    "@storybook/addon-jest": "^6.4.0-beta.18",
-    "@storybook/addon-links": "^6.4.0-beta.18",
+    "@storybook/addon-actions": "^6.4.0",
+    "@storybook/addon-essentials": "^6.4.0",
+    "@storybook/addon-jest": "^6.4.0",
+    "@storybook/addon-links": "^6.4.0",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack5": "^6.4.0-beta.18",
-    "@storybook/manager-webpack5": "^6.4.0-beta.18",
-    "@storybook/react": "^6.4.0-beta.18",
+    "@storybook/builder-webpack5": "^6.4.0",
+    "@storybook/manager-webpack5": "^6.4.0",
+    "@storybook/react": "^6.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/node": "^16.11.6",
